fixed spacing in the top of the page

--- a/app/assets/stylesheets/components/_flash.scss
+++ b/app/assets/stylesheets/components/_flash.scss
@@ -3,11 +3,13 @@
   padding: 24px;
   background-color: $rose;
   color: $secondary;
-  overflow: auto;
   font-family: $body-font;
   transform: translateY(0);
   transition: transform 2s;
   z-index: 300;
+  position:  fixed;
+  top: 0;
+  width: 100%;
 }
 
 
